processed/gerrit/txt_full/53277.txt
Change:     53277
Subject:    LU-16291 build: make kobj_type constant
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53277
Change-Id:  I19e0d1f4e3cf97f6871e038487cda9294ac1f67b
Project:    fs/lustre-release
Branch:     b2_14
Status:     NEW
Owner:      Jian Yu
Created:    2023-11-29 07:42:33.000000000
Updated:    2024-08-11 03:12:59.000000000
Patch Set:  2
Insertions: +3
Deletions:  -3
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Shaun Tancheff: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Shaun Tancheff

--- Commit Message ---
LU-16291 build: make kobj_type constant

Kernel v5.16-rc2-28-gee6d3dd4ed48:
commit ee6d3dd4ed48ab24b74bab3c3977b8218518247d
driver core: make kobj_type constant.

This patch makes struct kobj_type constant to fix
the following build failure against kernel 5.16:

lustre/obdclass/obd_config.c: In function 'class_modify_config':
lustre/obdclass/obd_config.c:1639:13: error: assignment discards
'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
1639 |         typ = get_ktype(kobj);
     |             ^

Lustre-change: https://review.whamcloud.com/49043
Lustre-commit: d1dbf26afd6676e02a2a00e635b9ad1fe14cf68e

Signed-off-by: Jian Yu <yujian@whamcloud.com>
Change-Id: I19e0d1f4e3cf97f6871e038487cda9294ac1f67b

--- Review History ---

--- Message (Jian Yu, 2023-11-29 07:42:33.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-11-29 07:45:31.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-11-29 08:14:05.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100566/ : SUCCESS

--- Message (Maloo, 2023-11-29 08:14:50.000000000) ---
Patch Set 1:

The following sessions will be run for build 100566 patch 1

Enforced:
- review-ldiskfs on el7.9-x86_64/ldiskfs servers and clients
- review-zfs on el7.9-x86_64/zfs servers and clients
- review-dne-part-1 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-2 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-3 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-4 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-5 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-6 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-7 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-zfs-part-1 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-2 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-3 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-4 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-5 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-6 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-7 on el7.9-x86_64/zfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=100566&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=100566#redirect

--- Message (Jian Yu, 2023-11-29 08:18:42.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (wc-checkpatch, 2023-11-29 08:21:26.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2023-11-29 08:40:55.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/100570/ : SUCCESS

--- Message (Maloo, 2023-11-29 08:41:15.000000000) ---
Patch Set 2:

The following sessions will be run for build 100570 patch 2

Enforced:
- review-ldiskfs on el7.9-x86_64/ldiskfs servers and clients
- review-zfs on el7.9-x86_64/zfs servers and clients
- review-dne-part-1 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-2 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-3 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-4 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-5 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-6 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-part-7 on el7.9-x86_64/ldiskfs servers and clients
- review-dne-zfs-part-1 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-2 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-3 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-4 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-5 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-6 on el7.9-x86_64/zfs servers and clients
- review-dne-zfs-part-7 on el7.9-x86_64/zfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=100570&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=100570#redirect

--- Message (Maloo, 2023-11-29 16:11:38.000000000) ---
Patch Set 2:

Failed enforced test review-zfs on CentOS 7.9/x86_64 uploaded by Trevis Autotest 2 from trevis-95vm2: https://testing.whamcloud.com/test_sessions/06ab2b75-e48d-4bbf-94a2-fb9f8afe1383 ran 7 tests.  1 tests failed: sanity-quota.

--- Message (Maloo, 2023-11-29 16:39:49.000000000) ---
Patch Set 2:

Failed enforced test review-dne-part-4 on CentOS 7.9/x86_64 uploaded by Onyx Autotest 2 from onyx-51vm1: https://testing.whamcloud.com/test_sessions/b90a0b32-b6ee-488b-b317-60ca6e9e2e68 ran 9 tests.  1 tests failed: sanity-quota.

--- Message (Autotest, 2023-11-29 16:46:48.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-dne-part-4 session on el7.9-x86_64/ldiskfs servers and clients for build 100570 patch 2. Requested by jianyu because of LU-13644.

--- Message (Autotest, 2023-11-29 16:47:08.000000000) ---
Patch Set 2:

Trevis Autotest 2 retesting enforced review-zfs session on el7.9-x86_64/zfs servers and clients for build 100570 patch 2. Requested by jianyu because of LU-13644.

--- Message (Maloo, 2023-11-29 18:52:52.000000000) ---
Patch Set 2: Verified-1

Passed enforced test review-dne-part-3 on CentOS 7.9/x86_64 uploaded by Onyx Autotest 2 from onyx-72vm1: https://testing.whamcloud.com/test_sessions/2227d1bd-0492-4a5f-b6cf-ed9913f94141 ran 3 tests.

--- Message (Maloo, 2023-11-29 21:30:30.000000000) ---
Patch Set 2:

Passed enforced test review-zfs on CentOS 7.9/x86_64 uploaded by Trevis Autotest 2 from trevis-43vm1: https://testing.whamcloud.com/test_sessions/74a56076-e669-4353-8ce1-d11a1f923d24 ran 7 tests.

--- Message (Maloo, 2023-11-29 21:42:35.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-dne-part-4 on CentOS 7.9/x86_64 uploaded by Trevis Autotest 2 from trevis-55vm1: https://testing.whamcloud.com/test_sessions/887352df-8030-446c-b5bd-258c65b80391 ran 9 tests.

--- Message (Shaun Tancheff, 2024-08-11 03:12:59.000000000) ---
Patch Set 2: Code-Review+1
